# FileManagerPro

./: .hintrc  README.md
Installer/: .env  Dockerfile  License.txt  Readme.txt  config.json  digital_signature.iss  docker-compose.yml  entrypoint.sh  setup.iss  update_check.iss
Installer/Examples/SampleProjects/ConfigurationExamples/: app_config.json  environment_vars.env  system_config.xml  user_settings.ini
Installer/Examples/SampleProjects/FileOperationsDemo/To_Copy/: document1.txt
Installer/Examples/SampleProjects/NavigationDemo/: README.txt
Installer/Examples/SampleProjects/SearchDemo/: search_me.txt
Installer/Examples/SampleProjects/SourceCodeExamples/: README.txt
Installer/Examples/SampleProjects/SourceCodeExamples/CSharp_Example/: CreateSampleFiles.bat  Directory.Build.props  FileOperations.cs  FileOperations.csproj  appsettings.json
Installer/Examples/SampleProjects/SourceCodeExamples/CSharp_Example/Cpp_Example/: FileManager.cpp  FileManager.hpp  main.cpp
Installer/Examples/SampleProjects/SourceCodeExamples/CSharp_Example/Cpp_Example/C_Example/: main.c  utils.c  utils.h
Installer/Examples/SampleProjects/SourceCodeExamples/CSharp_Example/Properties/: AssemblyInfo.cs
Installer/Examples/Templates/ConfigTemplates/: config.json  settings.ini
Installer/Examples/Templates/DocumentationTemplates/: project_readme.md
Installer/Examples/Templates/FileStructureTemplates/DataProject/: analysis.py  requirements.txt
Installer/Examples/Templates/FileStructureTemplates/SimpleProject/: CMakeLists.txt  License.md  Makefile  README.md
Installer/Examples/Templates/FileStructureTemplates/SimpleProject/src/: main.cpp
Installer/Examples/Templates/FileStructureTemplates/WebProject/: README.md  index.html  manifest.json  robots.txt  script.js  service-worker.js  sitemap.xml  style.css
Installer/Examples/Templates/ProjectTemplates/: README.txt
Installer/Examples/Templates/ProjectTemplates/CSharp_Project/: FileManager.cs  FileManager.csproj  README.md
Installer/Examples/Templates/ProjectTemplates/CSharp_Project/Cpp_Project/: .gitignore  CMakeLists.txt  README.md
Installer/Examples/Templates/ProjectTemplates/CSharp_Project/Cpp_Project/C_Project/: README.md  main.c  utils.c  utils.h
Installer/Examples/Templates/ProjectTemplates/CSharp_Project/Cpp_Project/docs/: API.md  BUILDING.md  CONTRIBUTING.md  README.txt  USAGE.md
Installer/Examples/Templates/ProjectTemplates/CSharp_Project/Cpp_Project/lib/: README.txt
Installer/Examples/Templates/ProjectTemplates/CSharp_Project/Cpp_Project/src/: FileManager.cpp  ProjectUtils.cpp  main.cpp
Installer/Examples/Templates/ProjectTemplates/CSharp_Project/Cpp_Project/src/include/: FileManager.hpp  ProjectUtils.hpp  StringUtils.hpp
Installer/Examples/Templates/ProjectTemplates/CSharp_Project/Cpp_Project/src/tests/: README.md  test_filemanager.cpp  test_main.cpp  test_projectutils.cpp
Installer/GUI/: App.xaml  BoolToBoldConverter.cs  FileManager.csproj  FileTypeToIconConverter.cs  FileViewer.xaml  FileViewer.xaml.cs  InfoDialog.xaml  InfoDialog.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  PropertiesDialog.xaml  PropertiesDialog.xaml.cs  PropertiesDialogViewModel.cs  ViewModeConverters.cs
Installer/GUI/Logic/: disk-space-alert.json  file-registry-export.json  fileops_loader.cpp  fileops_loader.hpp  main.cpp  navigator  navigator.cpp  navigator.hpp  tmp-cleanup-automation.json  wrapper.sh
Installer/GUI/Logic/Core/: CMakeLists.txt  file_ops.c  file_utils.c
Installer/Help/: features.html  getting-started.html  index.html  navigation.html
